--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "auth"]
 	path = auth
 	url = https://github.com/red23495/ticketing_auth.git
+[submodule "common"]
+	path = common
+	url = https://github.com/red23495/ticketing_common.git
