--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,6 +16,14 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: hridooy/ticketing_ticket
+      context: ticket
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
     - image: hridooy/ticketing_client
       context: client
       docker:
