--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -25,6 +25,13 @@ spec:
                 port:
                   number: 3000
           - pathType: Prefix
+            path: /api/tickets
+            backend:
+              service:
+                name: ticketing-ticket-srv
+                port:
+                  number: 3000
+          - pathType: Prefix
             path: /?(.*)
             backend:
               service:
