--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "common"]
 	path = common
 	url = https://github.com/red23495/ticketing_common.git
+[submodule "ticket"]
+	path = ticket
+	url = https://github.com/red23495/ticketing_ticket.git
