--- a/infra/k8s/ticket-depl.yaml
+++ b/infra/k8s/ticket-depl.yaml
@@ -16,13 +16,21 @@ spec:
         - name: ticket
           image: hridooy/ticketing_ticket
           env:
-            - name: TICKETING_AUTH_JWT_KEY
+            - name: TICKETING_TICKET_JWT_KEY
               valueFrom:
                 secretKeyRef:
                   name: ticketing
                   key: JWT_KEY
-            - name: TICKETING_AUTH_DB_HOST
+            - name: TICKETING_TICKET_DB_HOST
               value: auth-mongo-srv
+            - name: TICKETING_NATS_CLUSTER_ID
+              value: 'ticketing'
+            - name: TICKETING_TICKET_NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: TICKETING_NATS_URL
+              value: 'http://nats-srv:4222' 
           resources:
             limits:
               memory: "512Mi"
